<resources>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="get_started">Get Started</string>
    <string name="i_agree_to_privacy_policy">I agree to Privacy Policy</string>
    <string name="confirm_discard">Confirm Discard</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to exit? Your image will not be saved.</string>
    <string name="discard">Discard</string>
    <string name="no_save_it">No, Save it</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="give_us_a_quick_rating">Give us a quick rating so we know if you like</string>
    <string name="continuee">Continue</string>
    <string name="not_now">Not Now</string>
    <string name="timer">Timer</string>
    <string name="bright">Bright</string>
    <string name="speed">Speed</string>
    <string name="flash">Flash</string>
    <string name="_5_sec">5 Sec</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="warp_it_now">Warp it now</string>
    <string name="export_to_gallery">Export to Gallery</string>
    <string name="your_image_was_saved_successful">Your image was saved successful.\n Share with your friends now.</string>
    <string name="share_via">Share Via</string>
    <string name="no_photo_found">No Photo Found!</string>
    <string name="your_photo_will_be_saved_here">Your photo will be saved here</string>
    <string name="warp_photo_now">Warp Photo NOW!</string>
    <string name="preview">Preview</string>
    <string name="save_photo">Save Photo</string>
    <string name="your_image_was_saved_successful_n_share">Your image was saved successful.\n Share with your friends now.</string>
    <string name="time_warp_scan_premium">Time Warp Scan Premium</string>
    <string name="purchase_time_warp_scan_to_unlock">Purchase Time Warp Scan to unlock all features without ads</string>
    <string name="purchase_premium">Purchase Premium</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="languages">Languages</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="app_version">App Version</string>
    <string name="share_photo">Share Photo</string>
    <string name="are_you_sure_want_to_exit_1">Are you sure want to exit?</string>
    <string name="no">No</string>
    <string name="sec">\ sec\</string>
    <string name="enable_permission">Please enable permission</string>
    <string name="save_video">Save Video</string>
    <string name="sahre_video">Share Video</string>
    <string name="saved_success">Saved Successfully!</string>
    <string name="feedback_msg">Tell us which issue you are facing using Time Warp Scan App?. Your feedback is valuable for us.</string>
    <string name="please_enter_feedback">Please Enter Feedback message</string>
    <string name="send_email">Send email…</string>
    <string name="share_app">Share App</string>
    <string name="no_video_found">No Video Found!</string>
    <string name="your_video_will_be_save_here">Your video will be saved here</string>
    <string name="warp_video_now">Warp Video NOW!</string>
    <string name="exported_successful">Exported Successfully</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="check_agreement">Please check agreement.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy_how_to_unsubscribe_term_of_use">Privacy Policy | How to Unsubscribe | Term of use</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="automatically_renew_every_month">automatically renew every month</string>
    <string name="you_can_limited_use_without_subscription">You can limited use without subscription</string>
    <string name="enjoy_using_ads_free_version">Enjoy using Ads Free Version</string>
    <string name="purchase_time_warp_scan_to_unlock_all_features_without_ads">Purchase Time Warp Scan to unlock all features without ads</string>
    <string name="time_warp_scan_pro">Time Warp Scan Pro</string>
    <string name="monthly">Monthly</string>
    <string name="feedback_1">\"Feedback: \"</string>

    <string name="app_name">Time Warp Scan</string>
    <string name="allow_camera_permission">Allow Camera permission to continue.</string>
    <string name="please_select_privacy_policy">Please select privacy policy to continue</string>
    <string name="allow_storage_permission">Allow Storage permission to save file.</string>
    <string name="core_permissions_msg">Core fundamentals are based on these permissions</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permissions_denied_msg">These permissions are denied</string>
    <string name="please_enable_permissions">Please enable permissions</string>
    <string name="already_saved">Already saved</string>
    <string name="yes_delete_it">Yes, Delete It</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete? File will be deleted permanently.</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="not_allow"><u>Not Allow</u></string>
    <string name="allow_permission">Allow Permission</string>
    <string name="capture_photo_amp_record_video">Capture Photo &amp; Record Video</string>
    <string name="to">to</string>
    <string name="access_to_your_camera_and_allows_you">Allow access to storage, camera, and notifications for enhanced functionality and seamless user experience.</string>
    <string name="access_to_your_camera_and_allows_you1">Allow access to storage and camera for enhanced functionality and seamless user experience.</string>
    <string name="permission_required">Permission Required</string>
    <string name="language_changed">Language changed successfully</string>
    <string name="file_will_not_be_saved">Are you sure want to exit? Your file will not be saved.</string>
    <string name="file_already_exists">File name already exists</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="app_is_not_installed">App is not installed</string>
    <string name="are_you_sure_to_exit">Are you sure to exit?</string>
    <string name="yes_exit_now">Yes, Exit Now!</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_file">Rename File</string>
    <string name="lets_try_trending_warp_filter_effect">Lets try trending Warp filter effect</string>
    <string name="app_settings">App Settings</string>
    <string name="camera_scan">Camera Scan</string>
    <string name="my_collection">My Collection</string>
    <string name="tap_here_to_wrap_it_now">Tap here to wrap it now</string>
    <string name="tap_here_to_see_it_now">Tap here to see your collection</string>
    <string name="tap_here_to_open_settings">Tap here to open app settings</string>
    <string name="welcome">Welcome</string>
    <string name="choose_language_of_the_app">Choose language of the app</string>
    <string name="flag">flag</string>
    <string name="arabic">Arabic</string>
    <string name="save">save</string>
    <string name="ad">Ad</string>
    <string name="later">img\n</string>
    <string name="loading">Loading AD</string>


</resources>