<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/white_btn_bg"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_like_our_app"
            android:textColor="@color/textColor3"
            android:textSize="18sp"
            android:fontFamily="@font/abeezee"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rate_us"
            android:fontFamily="@font/abeezee"
            android:textColor="@color/textColor3"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:rating="4.5"
            android:theme="@style/RatingBar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rateOnPlaystore"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_splash_btn"
            android:text="@string/subscribe_now"
            android:fontFamily="@font/abeezee"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/notNow"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/not_now"
            android:fontFamily="@font/abeezee"
            android:textColor="@color/textColor3"
            android:textSize="16sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>