<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_background"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="30dp"
    android:paddingEnd="20dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/rename"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/enterNameEtLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/enterNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:hint="@string/rename_file"
            android:maxLength="50"
            android:fontFamily="@font/abeezee"
            android:textColor="@color/textColor3"
            android:textColorHint="@color/textColor3_trans_50" />

        <ImageView
            android:id="@+id/clearEdiText"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/cross_icon_red" />

    </RelativeLayout>

    <TextView
        android:id="@+id/commitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterNameEtLay"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:background="?android:selectableItemBackground"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/rename"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterNameEtLay"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/commitBtn"
        android:background="?android:selectableItemBackground"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@color/textColor3_trans_50"
        android:textSize="14sp" />

</RelativeLayout>