<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/btn_background"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:id="@+id/renameFile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_icon" />

            <TextView
                android:id="@+id/txtRename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/rename"
                android:textColor="@color/textColor3"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteFile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_icon"
                app:tint="@color/orange_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/delete"
                android:textColor="@color/textColor3"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sharePhoto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_icon" />

            <TextView
                android:id="@+id/txtShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/share_photo"
                android:textColor="@color/textColor3"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/savePhoto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download_icon" />

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/save_photo"
                android:textColor="@color/textColor3"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
