<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:padding="8dp"
    tools:context=".fragments.FilesFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/noItemFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/noFoundIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/photo_not" />

        <TextView
            android:id="@+id/noFoundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/no_photo_found"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/noFoundDesTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/your_photo_will_be_saved_here"
            android:textColor="@color/white_transparent_60"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/warpPhotoNow"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/wrap_btn_bg"
            android:gravity="center">

            <ImageView
                android:id="@+id/modeIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/saveBtnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/warp_photo_now"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>